# ED3_ejercicios_2024

./: CMakeLists.txt  Ej10.c  Ej11.c  Ej2.c  Ej6.c  Ej7.c  Ej9.c  Primer parcial 1ra.cpp  Primer parcial 2da.c  Punteros y registros.c
Ejercicios/: Ej timer Gallardo.c  Ej timer Gallardo.mmd  Ej05.c  Ej08.c  Ej1.c  Ej10.c  Ej11.c  Ej14.c  Ej14.mmd  Ej18.c  Ej18.mmd  Ej19.c  Ej19.mmd  Ej21.c
Parciales/: 2024 - 1er - Ej1.c  2024 - 1er - Ej2.c
Punteros y drivers/: ADC.md  DAC.md  DMA.md  EInt.md  GPIO.md  Pinsel.md  SysTick.md  Timers.md
