cmake_minimum_required(VERSION 3.29)
project(ED3_ejercicios C)

set(CMAKE_C_STANDARD 11)

add_executable(ED3_ejercicios main.c
        "Parciales/2024 - 1er - Ej1.c"
        "Parciales/2024 - 1er - Ej2.c"
        Ejercicios/Ej14.c
        Ejercicios/Ej19.c
        Ejercicios/Ej01.c
        "Ejercicios/Ej timer Gallardo.c"
        Ejercicios/Ej18.c)

